# sandbox

./: .env.example  .gitignore  README.md  pyproject.toml  rbac-ci.yml  temp.txt  test.html  test2.html
.github/workflows/: deploy.yml
api/: config.py  main.py
api/routers/: run.py
api/schemas/: run.py
api/services/: k8s_runner.py
deploy/: Dockerfile
docker/python/: Dockerfile
k8s/: generate_job.py
k8s/templates/: python_job.yaml.j2
sandbox-chart/: Chart.yaml  values.yaml
sandbox-chart/templates/: cluster-issuer.yaml  deployment.yaml  ingress.yml  role.yml  rolebinding.yml  service.yaml
sandbox_core/: language_registry.py
